# Azure-AI-Foundry-ITSM

./: .dockerignore  .gitignore  Deployment_Steps.md  LICENSE  README.md  apim_api_config.md  deploy.ps1  halo_serlfservice_custom.html
.github/workflows/: ci.yml  deploy.yml
Notebooks/: .env.sample  01_azure_ai_agent-mcp.ipynb  requirements.txt
agents/: __init__.py  classifier.py  deploy.py  kb_lookup.py  requirements.txt  ticket_agent.py  triage_agent.py
apps/services/itsm-api/: Dockerfile  pyproject.toml
apps/services/itsm-api/src/: config.py  main.py  models.py
apps/services/itsm-api/src/workflow/: classifier.py  handlers.py  models.py  pipeline.py
apps/ui/: .gitignore  Dockerfile  docker-entrypoint.sh  embed.html  index.html  nginx.conf  nginx.conf.template  package.json  vite.config.js
apps/ui/src/: App.jsx  EmbedApp.jsx  embed.jsx  main.jsx  theme.js
docs/: deployment_Steps.md  halo_selfservice_embed.md  manual_deployment.md  prompt_examples.md
infra/: locals.tf  main.tf  outputs.tf  provider.tf  terraform.tfvars  terraform.tfvars.tpl  variables.tf
infra/modules/ai_services/: main.tf  outputs.tf  variables.tf
infra/modules/apim/: main.tf  outputs.tf  variables.tf
infra/modules/app/: main.tf
infra/modules/app_configuration/: main.tf  outputs.tf  variables.tf
infra/modules/application/: main.tf
infra/modules/container_apps/: main.tf  outputs.tf  variables.tf
scripts/: Deploy-APIM-Configuration.ps1  Deploy-Containers.ps1  Deploy-FoundryAgents.ps1  Deploy-Infrastructure.ps1  New-GitHubOidc.ps1
scripts/common/: DeploymentFunctions.psm1
(+24 files in other folders)
