[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "itsm-api"
version = "0.1.0"
description = "ITSM API - AI-powered IT service desk (Foundry agent workflow gateway)"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",

    # Settings / validation
    "pydantic>=2.0",
    "pydantic-settings>=2.0",

    # Azure AI
    "azure-identity>=1.18.0",
    "azure-ai-projects==2.0.0b2",
    "azure-appconfiguration>=1.7.0",

    # Agent Framework (pre-release)
    "agent-framework>=0.0.1a0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
